# tic-tac-toe

./: .dockerignore  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: ci.yml  test.yml  tests.yml
api/: README.md  pyproject.toml
api/src/: app.py
api/tests/: app.py
backends/: README.md  pyproject.toml  requirements.development.txt  requirements.txt  setup.py
backends/api/: app.py  swagger.py
backends/api/specs/: games.put.yml  index.get.yml
backends/tests/: app.py
backends/tests/app/: test_create_game.py  test_move_computer.py  test_move_human.py  test_resume_game.py  test_root.py  test_sanity.py
frontends/: README.md
frontends/console/: args.py  renderers.py
